<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Traitement_Compte_Activity"
    android:background="@drawable/arrier_plan">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_nom"
            android:layout_marginTop="@dimen/E2"
            android:inputType="text"/>

        <EditText
            android:id="@+id/prenom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_prenom"
            android:inputType="text"/>

        <EditText
            android:id="@+id/N_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_numero_de_telephone"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mot_de_passe"
            android:inputType="textPassword"/>


        <Button
            android:layout_marginTop="@dimen/mt5"
            android:id="@+id/B_suivat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/animation_button"
            android:onClick="B_confermer"
            android:text="@string/suivant"
            android:textColor="@color/blanc"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/Remarque_compte"
            android:textColor="@color/red"
            android:textSize="@dimen/T1"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ok"
            android:gravity="center"
            android:textColor="@color/colorPrimary"
            android:onClick="B_ok"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retour"
            android:id="@+id/retour"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="center"
            android:onClick="retour_compte"/>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>