<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Traitement_Oblier_mdp_Activity"
    android:background="@drawable/arrier_plan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Resultat_mdp"
                android:layout_gravity="center"
                android:gravity="center" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/p_oublier_num_tel"
                android:inputType="phone"
                android:id="@+id/N_Tel"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_code"
                android:inputType="textPassword"
                android:id="@+id/code"/>

            <Button
                android:layout_marginTop="@dimen/mt6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/animation_button"
                android:onClick="B_suivant"
                android:text="@string/b_suivant"
                android:textColor="@color/blanc"
                android:textStyle="bold"/>
            
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/Retour_ob"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:onClick="Retour_oblier"
                android:text="@string/retour"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>