<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/arrier_plan">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_weight="50"
        android:orientation="vertical"
        android:background="@drawable/accueil">

        <TextView
            android:id="@+id/resultat_login_mdp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/LL1"
            android:textStyle="bold" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="50"
        android:orientation="vertical">


        <Button
            android:layout_marginTop="30dp"
            android:id="@+id/achat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/animation_button"
            android:onClick="B_achat"
            android:text="@string/achat"
            android:textColor="@color/blanc"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/vente"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/animation_button"
            android:onClick="Button_Vente"
            android:text="@string/vente"
            android:textColor="@color/blanc"
            android:textStyle="bold"/>


        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/deconnexion"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:gravity="center"
            android:id="@+id/deconnexion_acc"
            android:onClick="deconnexion_acc"
            />
    </LinearLayout>


</LinearLayout>